cmake_minimum_required(VERSION 3.21)
project(CPP_30_DAYS)

set(CMAKE_CXX_STANDARD 14)

# select source file to run (day_xx.cpp)
add_executable(CPP_30_DAYS day_25.cpp)

#add_executable(
#        CPP_30_DAYS
#        day_00.cpp
#        day_01.cpp
#        day_02.cpp
#        day_03.cpp
#        day_04.cpp
#        day_05.cpp
#        day_06.cpp
#        day_07.cpp
#        day_08.cpp
#        day_09.cpp
#        day_10.cpp
#        day_11.cpp
#        day_12.cpp
#        day_13.cpp
#        day_14.cpp
#        day_15.cpp
#        day_16.cpp
#        day_17.cpp
#        day_18.cpp
#        day_19.cpp
#        day_20.cpp
#        day_21.cpp
#        day_22.cpp
#        day_23.cpp
#        day_24.cpp
#        day_25.cpp
#        day_26.cpp
#        day_27.cpp
#        day_28.cpp
#        day_29.cpp
#)
